src/app/shared/selection-list/list-item/list-item.component.scss
@import 'mixins';

:host {
  --check-duration: 150ms;
  display: block;
  height: var(--spacing-two-and-half);
  overflow: hidden;
}

.list-item-container {
  display: flex;
  align-items: center;
  height: var(--spacing-two);

  &.cdk-keyboard-focused {
    outline: 2px solid var(--color-primary);
  }

  &.has-value {
    cursor: pointer;
  }

  &.cdk-drag-placeholder {
    opacity: 0;
  }

  &.indented {
    transform: translate3d(-20px, 0, 0);
  }

  mh-icon {
    color: var(--color-primary);
  }
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.checkbox-container,
.add-icon {
  width: var(--spacing-one);
  height: var(--spacing-one);
  margin-right: var(--spacing-one);
  flex: none;
}

.checkbox-container {
  border: 2px solid var(--color-primary);
  background-color: transparent;
  border-radius: var(--spacing-quarter);
  position: relative;
  transition: background-color var(--check-duration) ease;
  cursor: pointer;

  &.checked {
    background: var(--color-primary);

    .checkbox__short-line,
    .checkbox__long-line {
      opacity: 1;
    }
  }
}

.checkbox__short-line,
.checkbox__long-line {
  position: absolute;
  height: 2px;
  transform-origin: left center;
  border-radius: 1px;
  background-color: var(--color-bg);
  opacity: 0;
  transition: opacity var(--check-duration) ease;
}

.checkbox__short-line {
  transform: rotate(45deg);
  top: calc(50% - 2px);
  left: calc(50% - 5px);
  width: 5px;
}

.checkbox__long-line {
  transform: rotate(-45deg);
  top: calc(50% + 2px);
  left: calc(50% - 2.2px);
  width: 10px;
}

.item-input {
  @include input-placeholder() {
    color: var(--color-text-200);
  }

  background: transparent;
  border: none;
  min-width: 0;
  padding: 0;
  outline: none;
}

.delete-button {
  @include button-reset();

  padding: 0;
  margin-left: auto;
  background-color: transparent;
  width: var(--spacing-two);
  height: var(--spacing-two);
  flex: none;
}

